[gd_scene load_steps=6 format=3 uid="uid://do5dqisiv24u0"]

[ext_resource type="Script" uid="uid://pelhjjm5on4r" path="res://scripts/menu/settings.gd" id="1_dxr1k"]
[ext_resource type="Texture2D" uid="uid://dj27fpw2pc4sv" path="res://assets/pictures/Title.jpg" id="1_rqcjd"]
[ext_resource type="Script" uid="uid://dqyua1apqe080" path="res://scripts/menu/settings_control.gd" id="3_37860"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dxr1k"]
texture = ExtResource("1_rqcjd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqcjd"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.13)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dxr1k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.038
anchor_top = 0.04
anchor_right = 0.038
anchor_bottom = 0.04
offset_left = 0.359997
offset_top = 0.199999
offset_right = 514.36
offset_bottom = 182.2
theme_override_styles/panel = SubResource("StyleBoxTexture_dxr1k")

[node name="settings" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1260, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008
anchor_top = 0.619
anchor_right = 0.992
anchor_bottom = 0.619
offset_left = -0.240001
offset_top = -225.68
offset_right = 0.23999
offset_bottom = 225.32
grow_horizontal = 2
grow_vertical = 2

[node name="settings_control" type="VBoxContainer" parent="settings"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("3_37860")

[node name="vol" type="Label" parent="settings/settings_control"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Volume Control"

[node name="vol_slider" type="HSlider" parent="settings/settings_control"]
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="mute" type="HBoxContainer" parent="settings/settings_control"]
layout_mode = 2

[node name="Label" type="Label" parent="settings/settings_control/mute"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mute sound"

[node name="CheckBox" type="CheckBox" parent="settings/settings_control/mute"]
layout_mode = 2

[node name="fullscreen" type="HBoxContainer" parent="settings/settings_control"]
layout_mode = 2

[node name="Label" type="Label" parent="settings/settings_control/fullscreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Fullscreen?"

[node name="isFullscreen" type="CheckBox" parent="settings/settings_control/fullscreen"]
layout_mode = 2

[node name="res_lbl" type="Label" parent="settings/settings_control"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="settings/settings_control"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
item_count = 3
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1600 x 900"
popup/item_1/id = 1
popup/item_2/text = "1280 x 720"
popup/item_2/id = 2

[node name="keyBind" type="Button" parent="settings/settings_control"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rqcjd")
text = "Key binds"

[node name="confirmSetting" type="Button" parent="settings/settings_control"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rqcjd")
text = "Confirm Settings"

[node name="goBack" type="Button" parent="settings/settings_control"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rqcjd")
text = "Go Back"

[node name="input_control" type="VBoxContainer" parent="settings"]
layout_mode = 2

[node name="mForward" type="HBoxContainer" parent="settings/input_control"]
layout_mode = 2

[node name="movementForward" type="Label" parent="settings/input_control/mForward"]
layout_mode = 2
text = "Move Forward"

[node name="mBackward" type="HBoxContainer" parent="settings/input_control"]
layout_mode = 2

[node name="movementBackward" type="Label" parent="settings/input_control/mBackward"]
layout_mode = 2
text = "Move Backward"

[node name="mLeft" type="HBoxContainer" parent="settings/input_control"]
layout_mode = 2

[node name="movementLeft" type="Label" parent="settings/input_control/mLeft"]
layout_mode = 2
text = "Turn Left"

[node name="mRight" type="HBoxContainer" parent="settings/input_control"]
layout_mode = 2

[node name="movementRight" type="Label" parent="settings/input_control/mRight"]
layout_mode = 2
text = "Turn Right"

[connection signal="pressed" from="settings/settings_control/keyBind" to="settings/settings_control" method="_on_key_bind_pressed"]
[connection signal="pressed" from="settings/settings_control/confirmSetting" to="settings/settings_control" method="_on_confirm_setting_pressed"]
[connection signal="pressed" from="settings/settings_control/goBack" to="settings/settings_control" method="_on_go_back_pressed"]
