extends VBoxContainer


func _on_go_back_pressed() -> void:
	print("Go Back!")
	pass # Replace with function body.


func _on_confirm_setting_pressed() -> void:
	print("Confirm!")
	pass # Replace with function body.


func _on_key_bind_pressed() -> void:
	print("Key Binds!")
	pass # Replace with function body.
